--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       </div>
       <div class="video-container" id="videoContainer">
         <video id="webcam" autoplay playsinline></video>
+        <canvas id="three-canvas" style="position: absolute; top: 0; left: 0;"></canvas>
       </div>
     </div>
 
